# Installation:
# -------------
# python3 -m venv $VENV_PATH
# $VENV_PATH/bin/pip install -U pip setuptools
# $VENV_PATH/bin/pip install poetry

[tool.poetry]
name = "pynn"
version = "0.1.0"
description = "Neural Network Library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://teratron.github.io/pynn"
repository = "https://github.com/teratron/pynn"
documentation = "https://teratron.github.io/pynn/docs"
keywords = [
    "neural",
    "network"
]
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Apple :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [
    { include = "pynn", from = "src" },
    { include = "examples" }
]
include = [
    { path = "tests", format = "sdist" },
    { path = "pynn/py.typed" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.0"
requests = "^2.28.1"
setuptools = "^65.6.3"
pre-commit = "^2.20.0"
black = "^22.12.0"
pylint = "^2.15.8"
flake8 = "^6.0.0"
autopep8 = "^2.0.0"
bandit = "^1.7.4"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-jsonschema = "^4.9.0"
types-requests = "^2.28.11"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
pydocstyle = "^6.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
pynn = "pynn.console.app:main"
perceptron = "examples.perceptron.main"
tests = "pytest"

[tool.mypy]
files = "src"
mypy_path = "src"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
