[tool.poetry]
name = "pynn"
version = "0.1.0"
description = "Neural Network Library"
authors = ["Oleg Alexandrov <alexandrovoleg.ru@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://teratron.github.io/pynn"
repository = "https://github.com/teratron/pynn"
documentation = "https://teratron.github.io/pynn/docs"
keywords = [
    "neural",
    "network"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Apple :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
packages = [
    { include = "pynn", from = "src" }
]
include = [
    { path = "tests", format = "sdist" },
    { path = "examples", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poetry = "^1.3.0"
requests = "^2.28.1"
setuptools = "^65.6.3"
pre-commit = "^2.20.0"
black = "^22.12.0"
pylint = "^2.15.8"
flake8 = "^6.0.0"
autopep8 = "^2.0.0"
bandit = "^1.7.4"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
pydocstyle = "^6.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
app = "pynn.console.app:main"
perceptron = "examples.perceptron.main:main"
tests = "pytest:tests"
black = "black:src/pynn/*.py"

[tool.mypy]
files = "src"
mypy_path = "src"
strict = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
show_error_codes = true

[tool.black]
target-version = ['py37']
preview = true
include = '\.pyi?$'
force-exclude = '''
.*/setup\.py$
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Installation poetry:
# --------------------
# python -m venv .venv
# .venv/bin/pip install -U pip setuptools
# .venv/bin/pip install poetry
